test/qp/bad/classic3.qp
-- Fail : the types of the branches of a pattern matching
-- don't match.
let bad x =
  match x with
    [] -> 0
  | _:_ -> true
;;

